PLYP-21 Mobile menu done. Added some logging out session/data block updates to make sure nav menu visibility works as intended.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -51,7 +51,7 @@ nav a.router-link-active {
 .alert-style {
     position: fixed;
     z-index: 9999;
-    top: 10%;
+    top: 8%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
